start doing js, edit html

--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
             <div class="content if-encrypt">
                 <div>Encrypt</div>
                 <div>Upload your audio file</div>
-                <input type="file" class="button blue" accept=".wav, .mp3" />
+                <a class="button blue">Upload Audio</a>
                 <div>*Support only .mp3, .wav file type</div>
+                
+                <input type="file" id="encrypt-input" accept=".wav, .mp3" />
             </div>
 
             <div class="content if-decrypt">
                 <div>Decrypt</div>
                 <div>Upload your audio file</div>
-                <input type="file" class="button blue" accept=".wav, .mp3" />
+                <a class="button blue">Upload Audio</a>
                 <div>*Support only .mp3, .wav file type encrypted by this tool</div>
+            
+                <input type="file" id="decrypt-input" accept=".wav, .mp3" />
             </div>
         </div>
 
