decrypt -> play audio

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="content if-encrypt">
                 <a class="button black process">Encrypt and Download</a>
                 <a id="download"></a>
-                <a id="test" href="https://www.google.com/"></a>
             </div>
 
             <div class="content if-decrypt">
                 <div id="play-audio">
+                    <a class="button black process">Test play sound</a>
                     <audio controls>
                         <source src="" type="audio/mp3" />
                         <source src="" type="audio/wav" />
