encrypt decrypt done (no file created yet)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Secure Audio Player</title>
+    <link rel="icon" sizes="16x16" href="img/icon.ico" />
     <link href="style.css" rel="stylesheet" />
-    <script src="//cdn.polyfill.io/v1/polyfill.min.js" async defer></script>
+    <!-- <script src="//cdn.polyfill.io/v1/polyfill.min.js" async defer></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
     <script src="script.js"></script>
@@ -13,10 +14,9 @@
 
 <body>
     <a class="start"></a>
-
+    <h1>Secure Audio Player</h1>
     <div id="stage">
 
-        <!-- <h1>Secure Audio Player</h1> -->
 
         <div id="page1">
             <div class="content">
