ugly ui - eveything else good

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="content if-decrypt">
-                <audio controls id="audio">
+                <audio controls id="audio" controlsList="nodownload">
                     <source src="" id="audioSrc" />
                     Your browser dows not support the audio element.
                 </audio>
